# SI204

./: CMakeLists.txt
HWS/HW03/: hw.cpp
HWS/HW04/: hw.cpp
HWS/HW05/: hw.cpp
HWS/HW06/: hw.cpp
HWS/HW08/: hw.cpp
HWS/HW09/: hw.cpp
HWS/HW12/: hw.cpp
LABS/LAB01/: lab01.cpp
LABS/LAB02/: lab02p1.cpp  lab02p2.cpp  lab02p3.cpp
LABS/LAB03/: part1.cpp  part2.cpp
LABS/LAB04/: part1.cpp  part2.cpp  part3.cpp
LABS/LAB05/: p1.cpp  p2.cpp  p3.cpp
PROJECTS/PROJ01/: gray.cpp  green.cpp  readppm.cpp  shift.cpp
